chore: cleanup deprecated API usage